# pptx-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE-MIT  LICENSE-APACHE  README.md
.github/: CODEOWNERS
.github/workflows/: coverage.yml
examples/: basic_odp_usage.rs  basic_usage.rs  image_extraction.rs  legacy_pptx_api.rs  manual_image_extraction.rs  memory_efficient_streaming.rs  performance_test.rs  presentation_metadata.rs  save_images.rs  slide_elements.rs
src/: ParserConfig.rs  constants.rs  container.rs  lib.rs  markdown.rs  metadata.rs  odp.rs  parse_rels.rs  parse_xml.rs  parser_config.rs  presentation.rs  slide.rs  types.rs  xml.rs
tests/: integration.rs  slide_tests.rs
tests/fixtures/integration/odp/: basic.odp
tests/fixtures/integration/pptx/: basic.pptx
tests/fixtures/unit/odp/: heading.xml  styles.xml  table.xml
tests/fixtures/unit/ooxml/: empty_table.xml  paragraph_empty.xml  pic_with_image.xml
tests/integration/: odp.rs  pptx.rs
tests/odp_test_data/: content.xml  image.xml  list.xml  test.odp
tests/test_data/: formatting_test.md  list_test.md  table_test.md  test.pptx
tests/test_data/xml/: complex_table.xml  multilevel_list.xml  non_table_graphic.xml  paragraph_multiple.xml  paragraph_single.xml  pic_without_blip.xml  pic_without_embed.xml  rels_with_images.xml  rels_without_images.xml  run_empty.xml  run_no_format.xml  run_styles.xml  simple_list.xml  simple_table.xml  tx_body.xml
tests/unit/: container.rs  markdown.rs  metadata.rs  odp.rs  odp_pull.rs  odp_tests.rs  parse_rels.rs  parse_xml.rs  parse_xml_pull.rs  parse_xml_tests.rs  parser_config.rs  presentation_tests.rs  slide.rs  types.rs  xml.rs
